# exa-ma-d7.1

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  Makefile  README.adoc  a.cli  defs.tex  exa-ma-d7.1.tex  exama-software.xlsx  gen.py  gitHeadLocal.gin  istcover.sty  istprog.sty  numpex.sty  pyproject.toml  references.bib  requirements.txt  standalone-wp1.tex  standalone-wp2.tex  standalone-wp3.tex  standalone-wp4.tex  standalone-wp5.tex  standalone-wp6.tex  zotero.sh
.devcontainer/: devcontainer.json
.github/workflows/: bibtex.yml  latex.yml
chapters/: 00-index.tex  WPs.tex  applications.tex  benchmarking.tex  methodology.tex  software.tex
chapters/WP1/: 00-index.tex  WP1.tex
chapters/WP2/: 00-index.tex  WP2.tex
chapters/WP3/: 00-index.tex  WP3.tex
chapters/WP4/: 00-index.tex  WP4.tex
chapters/WP5/: 00-index.tex  WP5.tex
chapters/WP6/: 00-index.tex  WP6.tex
chapters/WP7/: 00-index.tex
chapters/applications/: framework.tex  intro.tex  specs.tex
graphics/feelpp/: feelpp-benchmark-heatfluid-prone.tex  feelpp-benchmark-heatfluid-resheat.tex  feelpp-benchmark-heatfluid-standing.tex  feelpp-benchmark-heatfluid-supine.tex  feelpp-components.tex  feelpp-fda-2D-geometry.pdf_tex
literature/: references.bib
sections/: abbreviations.tex  appendix-a.tex  appendix-b.tex  benchmarking.tex  conclusions.tex  guidelines.tex  introduction.tex  summary.tex
software/arcane-framework/: arcane-framework.tex
software/cgal/: cgal.tex
software/composyx/: composyx.tex
software/feelpp/: feelpp.tex
templates/: desc-software.tex  software.tex  wp-software.tex
(+132 files in other folders)
